<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/auth_image_2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/auth_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/auth_input_data"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/auth_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textEmailAddress"
        android:drawableTint="@color/colorOrange"
        android:paddingLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/edit_text"
        android:hint="@string/e_mail"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text"
        android:drawableTint="@color/colorOrange"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <Button
        android:id="@+id/auth_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#fff"
        android:letterSpacing="0"
        android:paddingEnd="32dp"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:minHeight="50dp"
        android:paddingRight="32dp"
        android:text="@string/auth_sign_in"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="14dp"
        app:layout_constraintRight_toRightOf="@id/auth_next_btn"
        app:layout_constraintTop_toTopOf="@id/auth_next_btn"
        app:layout_constraintBottom_toBottomOf="@id/auth_next_btn"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_next_arrow"/>


</androidx.constraintlayout.widget.ConstraintLayout>