<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:elevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileStudentImage"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_profile_empty_ava"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileStudentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="Фамилия Имя Отчество"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/profileStudentImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profileGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="Группа"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/profileStudentImage"
            app:layout_constraintTop_toBottomOf="@id/profileStudentName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="Староста"
            android:visibility="invisible"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/profileGroup"
            app:layout_constraintTop_toBottomOf="@id/profileStudentName" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="#FFFFFF"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:src="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/profileTabLayout"
        app:tabTextAppearance="@style/MyCustomTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        app:tabMinWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileConstraintLayout"
        app:tabMode="auto"
        app:tabGravity = "fill"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileDebtTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_profile_tab_debt" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileRecordBookTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_profile_tab_record" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileFilesTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_profile_tab_groupFiles" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileElectivesTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_profile_tab_electives" />
    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/profileViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTabLayout"
        >

    </androidx.viewpager2.widget.ViewPager2>


</androidx.constraintlayout.widget.ConstraintLayout>
